--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
   },
   "homepage": "https://github.com/MiaYun98/monsocial-api#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.7.3"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.7.3",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.26.0"
   }
 }
