--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
-  "name": "monsocial-api",
-  "version": "1.0.0",
+  "name": "todo-jwt",
   "description": "",
+  "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "seed": "node utils/seed"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/MiaYun98/monsocial-api.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/MiaYun98/monsocial-api/issues"
-  },
-  "homepage": "https://github.com/MiaYun98/monsocial-api#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.7.3",
     "mysql2": "^2.3.3",
     "sequelize": "^6.26.0"
-  }
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "seed": "node seeds/seedMe.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Rufasa85/todo-jwt.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Rufasa85/todo-jwt/issues"
+  },
+  "homepage": "https://github.com/Rufasa85/todo-jwt#readme"
 }
