--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
+    "natural": "^5.2.4",
     "sequelize": "^6.26.0"
   },
   "scripts": {
